test/spec_vectors/type-rec/ok/module_13.wat
(module $M (rec (type $f1 (func)) (type (struct))) (func (export "f") (type $f1)))