test/spec_vectors/type-rec/fail/module_22.wat
(module (rec (type (struct)) (type $t (func))) (func $f) (global (ref $t) (ref.func $f)))